# stmdoor

./: .gitignore  README.md  stmdoor.kicad_pcb  stmdoor.kicad_prl  stmdoor.kicad_pro  stmdoor.kicad_sch
board/: stmdoor.kicad_pcb
stmdoor-fw/: Cargo.toml
stmdoor-fw/src/: main.rs
